--- a/themes/beryllium/layout/index.jade
+++ b/themes/beryllium/layout/index.jade
@@ -1,20 +1,7 @@
 doctype html
 html(lang="en")
     head
-        title= pageTitle
-        script(type='text/javascript').
-            if (foo) {
-                bar(1 + 5)
-            }
+        title= page.title
     body
-        h1 Jade - node template engine
-        #container.col
-            if youAreUsingJade
-                p You are amazing
-            else
-                p Get on it!
-            p.
-                Jade is a terse and simple
-                templating language with a
-                strong focus on performance
-                and powerful features.
+        a(href="/2016/03/21/hello-world") Hello World
+        block content
