--- a/themes/beryllium/layout/index.jade
+++ b/themes/beryllium/layout/index.jade
@@ -2,8 +2,14 @@ doctype html
 html(lang="en")
     head
         title= page.title
+        link(
+        rel='alternate',
+        type='application/atom+xml',
+        href='/atom.xml',
+        title='100 Shapes'
+        )
     body
-        each post in site.posts.data
+        each post in site.posts.toArray()
             li
                 a(href=url_for(post.path)) #{post.title}
         block content
