--- a/themes/beryllium/layout/index.jade
+++ b/themes/beryllium/layout/index.jade
@@ -1,15 +1,12 @@
-doctype html
-html(lang="en")
-    head
-        title= page.title
-        link(
-        rel='alternate',
-        type='application/atom+xml',
-        href='/atom.xml',
-        title='100 Shapes'
-        )
-    body
-        each post in site.posts.toArray()
-            li
-                a(href=url_for(post.path)) #{post.title}
-        block content
+extends base
+
+block site_body
+  ul.post-items
+    each post in page.posts.toArray()
+      li.post-item
+        article.post.post--compact
+          h2.post-item__title
+            a(href=url_for(post.path))= post.title
+          .post__excerpt!= post.excerpt
+
+  include _partial/post/list_pagination
