--- a/themes/beryllium/layout/page.jade
+++ b/themes/beryllium/layout/page.jade
@@ -4,5 +4,7 @@ prepend site_title
   | #{page.title} &mdash;&nbsp;
 
 block site_body
-  include _partial/post/entry
-  include _partial/post/entry_pagination
+  article.post
+    h2.post__title= page.title
+
+    .post__body!= page.content
