style(Content): Added basic css to look more 100 Shapesey
Brandon, Colour-scheme, etc

--- a/content/labs/index.jade
+++ b/content/labs/index.jade
@@ -1,11 +1,8 @@
 ---
 title: Labs
 date: 2016-03-22 16:53:04
-layout: custom/labs
+layout: views/labs
 ---
 
-div
-    p hello
-    {% blockquote David Levithan, Wide Awake %}
-    Do not just seek happiness for yourself. Seek happiness for all. Through kindness. Through mercy.
-    {% endblockquote %}
+p hello, we do fun lab things here. It's mega.
+    
