--- a/themes/beryllium/layout/views/labs.jade
+++ b/themes/beryllium/layout/views/labs.jade
@@ -1,4 +1,4 @@
-extends base
+extends ../base
 
 block site_body
     article.max-width-4.mx-auto
@@ -6,3 +6,7 @@ block site_body
             h1.h1= page.title
 
             section!= page.content
+
+            p List of labs projects
+
+
