--- a/themes/beryllium/source/css/dev.less
+++ b/themes/beryllium/source/css/dev.less
@@ -3,6 +3,6 @@
   Development helper stylesheets
 */
 
-@import "_base/variables.less";
-
-@import "_dev/hashgrid";
+//@import "_base/variables.less";
+//
+//@import "_dev/hashgrid";
