--- a/themes/beryllium/layout/_partial/post/entry.jade
+++ b/themes/beryllium/layout/_partial/post/entry.jade
@@ -1,10 +1,8 @@
-article(class=page.layout)
-  h2.post__title= page.title
+h1.h1= page.title
 
-  .post__meta
+div
     include meta
     +postDate(page.date)
     +postCategory(page.categories)
 
-  .post__body
-    != page.more
+section!= page.more
