--- a/themes/beryllium/layout/_partial/site/head.jade
+++ b/themes/beryllium/layout/_partial/site/head.jade
@@ -16,6 +16,7 @@ link(href=config.root + "favicon.png", rel="icon")
 
 //- RSS
 link(rel="alternate", href=theme.rss ? theme.rss : config.root + "rss2.xml", title="config.title", type="application/rss2.xml")
+link(href="https://npmcdn.com/basscss@8.0.1/css/basscss.min.css", rel="stylesheet")
 
 //- Stylesheets
 != css("css/app")
@@ -25,5 +26,3 @@ link(rel="alternate", href=theme.rss ? theme.rss : config.root + "rss2.xml", tit
 unless cache
 
   != css("css/dev")
-  != js("javascript/hashgrid")
-  != js("javascript/dev")
