--- a/themes/beryllium/layout/base.jade
+++ b/themes/beryllium/layout/base.jade
@@ -1,21 +1,21 @@
 doctype html
 html(lang="en")
 
-  head
-    include _partial/site/head
+    head
+        include _partial/site/head
 
-  body
-    .site-page
-      header.site-header
-        .site-masthead
-          block site_header
-            h1.site__title
-              a(href=config.root)= config.title
-            p.site__subtitle= config.subtitle
+    body
+        header.max-width-4.mx-auto
+            .clearfix
+                h1.h3.mb0
+                    a(href=config.root)= config.title
+                p.mt0= config.subtitle
 
-      section.site-body
-        block site_body
+        hr
 
-      footer.site-footer
-        block site_footer
-          include _partial/site/footer
+        section
+            block site_body
+
+        footer
+            block site_footer
+                include _partial/site/footer
