--- a/themes/beryllium/layout/index.jade
+++ b/themes/beryllium/layout/index.jade
@@ -1,12 +1,14 @@
 extends base
 
 block site_body
-  ul.post-items
-    each post in page.posts.toArray()
-      li.post-item
-        article.post.post--compact
-          h2.post-item__title
-            a(href=url_for(post.path))= post.title
-          .post__excerpt!= post.excerpt
+    .max-width-4.mx-auto
+        .clearfix
+            ol.list-reset
+                each post in page.posts.toArray()
+                    li
+                        article
+                            h2
+                                a(href=url_for(post.path))= post.title
+                            div!= post.excerpt
 
-  include _partial/post/list_pagination
+            include _partial/post/list_pagination
