--- a/content/work/BBC-freebird/index.jade
+++ b/content/work/BBC-freebird/index.jade
@@ -1,5 +1,15 @@
 ---
 title: BBC Freebird
+seo_title: Article analysis with BBC Freebird R&D project
 date: 2016-03-22 21:32:38
 description: SOmething about work here
+layout: views/project
 ---
+
+p.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+    exercitation ullamco laboris nisi ut aliquip ex ea   commodo consequat. Duis aute irure
+    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+    anim id est laborum
