--- a/themes/beryllium/layout/views/home.jade
+++ b/themes/beryllium/layout/views/home.jade
@@ -18,17 +18,17 @@ block site_body
 
                 .mxn1.clearfix
                     div.sm-col.sm-col-12.p1
-                        a(href=url_for('/enterprise-ux')).border-box.border.p4.block
+                        a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
                             h3.h1.m0 Creating better business systems
                             p.mt0 People-centered design that boosts your bottomline.
 
                     div.sm-col.sm-col-12.md-col-6.p1
-                        a(href=url_for('/enterprise-ux')).border-box.border.p4.block
+                        a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
                             h3.h2.m0 Something here
                             p.m0 Doing things for business
 
                     div.sm-col.sm-col-12.md-col-6.p1
-                        a(href=url_for('/enterprise-ux')).border-box.border.p4.block
+                        a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
                             h3.h2.m0 Another thing
                             p.m0 Doing things for business
 
@@ -41,22 +41,22 @@ block site_body
 
                 .mxn1.clearfix
                     div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.p4.block
+                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
                             h3.h1.m0 Transforming the way people transform
                             p.m0 Doing things for business and something else really cool.
 
                     div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.p4.block
+                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
                             h3.h1.m0 Transforming the way people transform
                             p.m0 Doing things for business and something else really cool.
 
                     div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.p4.block
+                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
                             h3.h1.m0 Transforming the way people transform
                             p.m0 Doing things for business and something else really cool.
 
                     div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.p4.block.xs-hide.sm-hide
+                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block.xs-hide.sm-hide
                             h3.h1.m0 Transforming the way people transform
                             p.m0 Doing things for business and something else really cool.
 
@@ -72,17 +72,17 @@ block site_body
 
                     .mxn1.clearfix
                         div.col.col-12.p1
-                            a(href=url_for('/enterprise-ux')).border-box.border.px4.py2.block
+                            a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
                                 h3.h3.m0 Project title
                                 p.m0 Doing things for business
 
                         div.col.col-12.p1
-                            a(href=url_for('/enterprise-ux')).border-box.border.px4.py2.block
+                            a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
                                 h3.h3.m0 Project title
                                 p.m0 Doing things for business
 
                         div.col.col-12.p1
-                            a(href=url_for('/enterprise-ux')).border-box.border.px4.py2.block
+                            a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
                                 h3.h3.m0 Project title
                                 p.m0 Doing things for business
 
@@ -96,12 +96,12 @@ block site_body
 
                     .mxn1.clearfix
                         div.col.col-12.p1
-                            a(href=url_for('/enterprise-ux')).border-box.border.px4.py2.block
+                            a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
                                 h3.m0 Project title
                                 p.m0 Doing things for business
 
                         div.col.col-12.p1
-                            a(href=url_for('/enterprise-ux')).border-box.border.px4.py2.block
+                            a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
                                 h3.m0 Project title
                                 p.m0 Doing things for business
 
@@ -116,7 +116,7 @@ block site_body
                     .mxn1.clearfix
                         each post in site.posts.toArray()
                             div.col.col-12.p1
-                                a(href=url_for(post.path)).border-box.border.px4.py2.block
+                                a(href=url_for(post.path)).border-box.border.rounded.px4.py2.block
                                     h3.m0= post.title
                                     p.m0 Doing things for business
 
