chore(Content): Homepage content styling
Copy and live Labs

--- a/themes/beryllium/layout/base.jade
+++ b/themes/beryllium/layout/base.jade
@@ -8,8 +8,7 @@ html(lang="en")
         header.max-width-3.mx-auto
             .clearfix
                 .col.col-12
-                    h1.h3.mb0
-                        a(href=config.root)= config.title
+                    a(href=config.root)= config.title
 
                 .col
                     p.mt0= config.subtitle
@@ -24,7 +23,7 @@ html(lang="en")
 
         hr
 
-        section
+        div
             block site_body
 
         footer
