--- a/themes/beryllium/layout/views/project.jade
+++ b/themes/beryllium/layout/views/project.jade
@@ -5,4 +5,4 @@ block site_body
         .clearfix
             h1.h1= page.seo_title
 
-            article!= page.content
+            div!= page.content
