--- a/themes/beryllium/layout/views/blog.jade
+++ b/themes/beryllium/layout/views/blog.jade
@@ -1,16 +1,14 @@
 extends ../base
 
-
-
 block site_body
-    article.max-width-4.mx-auto
+    div.max-width-3.mx-auto
         .clearfix
             h1.h1= page.title
 
-            section!= page.content
+            div!= page.content
 
             each post in site.posts.toArray()
                 a(href=url_for(post.path)).border-box.border.p2.mb2.block
                     h1.h2= post.title
 
-
+            include ../_partial/post/list_pagination
