--- a/themes/beryllium/layout/views/labs.jade
+++ b/themes/beryllium/layout/views/labs.jade
@@ -3,7 +3,7 @@ extends ../base
 
 
 block site_body
-    article.max-width-4.mx-auto
+    article.max-width-3.mx-auto
         .clearfix
             h1.h1= page.title
 
@@ -11,7 +11,7 @@ block site_body
 
             - var lab_items = site.categories.findOne({name: 'labs'}).posts.toArray()
             each post in lab_items
-                a(href=url_for(post.path)).border-box.border.p2.mb2.block
+                a(href=url_for(post.path)).border-box.border.rounded.p2.mb2.block
                     h1.h2= post.title
 
 
