refactor(Content): Changed default html structure

--- a/themes/beryllium/layout/base.jade
+++ b/themes/beryllium/layout/base.jade
@@ -23,8 +23,9 @@ html(lang="en")
 
         hr
 
-        div
-            block site_body
+        div.max-width-3.mx-auto
+            .clearfix
+                block site_body
 
         footer
             block site_footer
