--- a/themes/beryllium/layout/views/enterprise-ux.jade
+++ b/themes/beryllium/layout/views/enterprise-ux.jade
@@ -1,8 +1,6 @@
 extends ../base
 
 block site_body
-    article.max-width-3.mx-auto
-        .clearfix
-            h1.h1= page.title
+    h1= page.title
 
-            section!= page.content
+    section!= page.content
