--- a/themes/beryllium/layout/views/home.jade
+++ b/themes/beryllium/layout/views/home.jade
@@ -3,113 +3,112 @@ extends ../base
 
 
 block site_body
-    div.max-width-3.mx-auto
-        .clearfix
-            h1.h1= page.seo_title
+    h1.h1= page.seo_title
 
-            section!= page.content
+    p.
+        Opportunity to write something here as the introduction to the whole page.
 
-            section.my4
-                h2 Enterprise UX things
-                p.
-                    All things Enterprise UX solutions. Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam.
+    section.my4
+        h2 Enterprise UX things
+        p.
+            All things Enterprise UX solutions. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam.
 
-                .mxn1.clearfix
-                    div.sm-col.sm-col-12.p1
-                        a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
-                            h3.h1.m0 Creating better business systems
-                            p.mt0 People-centered design that boosts your bottomline.
+        .mxn1.clearfix
+            .sm-col.sm-col-12.p1
+                a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
+                    h3.h1.m0 Creating better business systems
+                    p.mt0 People-centered design that boosts your bottomline.
 
-                    div.sm-col.sm-col-12.md-col-6.p1
-                        a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
-                            h3.h2.m0 Something here
-                            p.m0 Doing things for business
+            .sm-col.sm-col-12.md-col-6.p1
+                a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
+                    h3.h2.m0 Something here
+                    p.m0 Doing things for business
 
-                    div.sm-col.sm-col-12.md-col-6.p1
-                        a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
-                            h3.h2.m0 Another thing
-                            p.m0 Doing things for business
+            .sm-col.sm-col-12.md-col-6.p1
+                a(href=url_for('/enterprise-ux')).border-box.border.rounded.p4.block
+                    h3.h2.m0 Another thing
+                    p.m0 Doing things for business
 
-            section.my4
-                h2 Recent Projects
-                p.
-                    Various projects. Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam.
+    section.my4
+        h2 Recent Projects
+        p.
+            Various projects. Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam.
 
-                .mxn1.clearfix
-                    div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
-                            h3.h1.m0 Transforming the way people transform
-                            p.m0 Doing things for business and something else really cool.
+        .mxn1.clearfix
+            .col.col-12.p1
+                a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
+                    h3.h1.m0 Transforming the way people transform
+                    p.m0 Doing things for business and something else really cool.
 
-                    div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
-                            h3.h1.m0 Transforming the way people transform
-                            p.m0 Doing things for business and something else really cool.
+            .col.col-12.p1
+                a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
+                    h3.h1.m0 Transforming the way people transform
+                    p.m0 Doing things for business and something else really cool.
 
-                    div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
-                            h3.h1.m0 Transforming the way people transform
-                            p.m0 Doing things for business and something else really cool.
+            .col.col-12.p1
+                a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block
+                    h3.h1.m0 Transforming the way people transform
+                    p.m0 Doing things for business and something else really cool.
 
-                    div.col.col-12.p1
-                        a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block.xs-hide.sm-hide
-                            h3.h1.m0 Transforming the way people transform
-                            p.m0 Doing things for business and something else really cool.
-
+            .col.col-12.p1
+                a(href=url_for('/work/BBC-freebird')).border-box.border.rounded.p4.block.xs-hide.sm-hide
+                    h3.h1.m0 Transforming the way people transform
+                    p.m0 Doing things for business and something else really cool.
 
 
-            section.my4
-                    h2 Labs
-                    p.
-                        Our #[a(href="/labs") labs projects] are like, amazing. Lorem ipsum dolor sit amet,
-                        consectetur adipiscin
-                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam.
+
+    section.my4
+        h2 Labs
+        p.
+            Our #[a(href="/labs") labs projects] are like, amazing. Lorem ipsum dolor sit amet,
+            consectetur adipiscin
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam.
 
 
-                    .mxn1.clearfix
-                        each project in site.categories.findOne({name: 'labs'}).posts.toArray()
-                            div.col.col-12.p1
-                                a(href=url_for(project.path)).border-box.border.rounded.px4.py2.block
-                                    h3.h3.m0= project.title
-                                    p.m0= project.subtitle
+        .mxn1.clearfix
+            each project in site.categories.findOne({name: 'labs'}).posts.toArray()
+                .col.col-12.p1
+                    a(href=url_for(project.path)).border-box.border.rounded.px4.py2.block
+                        h3.h3.m0= project.title
+                        p.m0= project.subtitle
 
 
-                section.my4
-                    h2 Ventures
-                    p.
-                        Our own products & services. Our labs projects are like, amazing. Lorem ipsum dolor sit amet, consectetur adipiscin
-                        elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam.
+    section.my4
+        h2 Ventures
+        p.
+            Our own products & services. Our labs projects are like, amazing. Lorem ipsum dolor sit amet, consectetur adipiscin
+            elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam.
 
-                    .mxn1.clearfix
-                        div.col.col-12.p1
-                            a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
-                                h3.m0 Climb.Social
-                                p.m0 Social Media anywhere you need it
+        .mxn1.clearfix
+            .col.col-12.p1
+                a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
+                    h3.m0 Climb.Social
+                    p.m0 Social Media anywhere you need it
 
-                        div.col.col-12.p1
-                            a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
-                                h3.m0 Wifime
-                                p.m0 Cool things with Wifi
+            .col.col-12.p1
+                a(href=url_for('/enterprise-ux')).border-box.border.rounded.px4.py2.block
+                    h3.m0 Wifime
+                    p.m0 Cool things with Wifi
 
 
-            section.my4
-                    h2 Blog
-                    p.
-                        Things we've written recently. Our labs projects are like, amazing. Lorem ipsum dolor sit amet,
-                        consectetur adipiscin elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                        enim ad minim veniam.
+    section.my4
+        h2 Blog
+        p.
+            Things we've written recently. Our labs projects are like, amazing. Lorem ipsum dolor sit amet,
+            consectetur adipiscin elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam.
 
-                    .mxn1.clearfix
-                        each post in site.posts.toArray()
-                            div.col.col-12.p1
-                                a(href=url_for(post.path)).border-box.border.rounded.px4.py2.block
-                                    h3.m0= post.title
-                                    p.m0 Doing things for business
+        .mxn1.clearfix
+            each post in site.posts.toArray()
+                .col.col-12.p1
+                    a(href=url_for(post.path)).border-box.border.rounded.px4.py2.block
+                        h3.m0= post.title
+                        p.m0 Doing things for business
 
 
