chore(Content): Scaffoldded more content
not import [ci skip]

--- a/themes/beryllium/layout/_partial/site/footer.jade
+++ b/themes/beryllium/layout/_partial/site/footer.jade
@@ -11,4 +11,6 @@ footer.max-width-3.mx-auto
         li.inline-block.mr2
             a(href=url_for("blog")) Blog
         li.inline-block.mr2
+            a(href=url_for("join-us")) Join us
+        li.inline-block.mr2
             a(href=theme.rss ? theme.rss : config.root + "rss2.xml") Feed
