--- a/themes/beryllium/layout/base.jade
+++ b/themes/beryllium/layout/base.jade
@@ -7,10 +7,10 @@ html(lang="en")
     body
         header.max-width-3.mx-auto
             .clearfix
-                .col.col-12
+                .col.col-12.px2
                     a(href=config.root)= config.title
 
-                .col
+                .col.px2
                     p.mt0= config.subtitle
 
                 .col.col-right.right-align.ml2
