--- a/themes/beryllium/layout/views/enterprise-ux.jade
+++ b/themes/beryllium/layout/views/enterprise-ux.jade
@@ -3,4 +3,15 @@ extends ../base
 block site_body
     h1= page.title
 
-    section!= page.content
+    div
+        p Something here
+
+        p Here's some links to related articles on the subject:
+
+        ul
+            li
+                a(href="./dog") Improve your bottom line
+            li
+                a(href="./dog") Do something else
+            li
+                a(href="./dog") Return on investment
