--- a/themes/beryllium/layout/_partial/site/head.jade
+++ b/themes/beryllium/layout/_partial/site/head.jade
@@ -16,7 +16,8 @@ link(href=config.root + "favicon.png", rel="icon")
 
 //- RSS
 link(rel="alternate", href=theme.rss ? theme.rss : config.root + "rss2.xml", title="config.title", type="application/rss2.xml")
-link(href="https://npmcdn.com/basscss@8.0.1/css/basscss.min.css", rel="stylesheet")
+link(href="/css/basscss.min.css", rel="stylesheet")
+//  link(href="https://npmcdn.com/basscss@8.0.1/css/basscss.min.css", rel="stylesheet")
 link(href="https://npmcdn.com/basscss-responsive-margin@1.1.0/css/responsive-margin.css", rel="stylesheet")
 
 //- Stylesheets
