--- a/themes/beryllium/layout/views/join-us.jade
+++ b/themes/beryllium/layout/views/join-us.jade
@@ -1,9 +1,10 @@
 extends ../base
 
 block site_body
-    h1= page.title
+    .col.col-12.p2
+        h1= page.title
 
-    p Join us content
+        p Join us content, innit.
 
     .clearfix
         .sm-col.sm-col-8.p2
