--- a/themes/beryllium/layout/_partial/site/footer.jade
+++ b/themes/beryllium/layout/_partial/site/footer.jade
@@ -1,16 +1,18 @@
 hr.mt1
-footer.max-width-3.mx-auto
-    .clearfix
-    ul.list-reset
-        li.inline-block.mr2
-            a(href=url_for("/")) Home
-        li.inline-block.mr2
-            a(href=url_for("enterprise-ux")) Enterprise UX
-        li.inline-block.mr2
-            a(href=url_for("labs")) Labs
-        li.inline-block.mr2
-            a(href=url_for("blog")) Blog
-        li.inline-block.mr2
-            a(href=url_for("join-us")) Join us
-        li.inline-block.mr2
-            a(href=theme.rss ? theme.rss : config.root + "rss2.xml") Feed
+
+footer
+    .max-width-3.mx-auto
+        .clearfix
+            .col.col-12.px2
+                include menu
+
+    hr
+
+    .max-width-3.mx-auto
+        .clearfix
+            .col.col-12.px2.center.mb2
+                ul.list-reset
+                    li.inline-block.mr2 Minor
+                    li.inline-block.mr2 Something here
+                    li.inline-block.mr2 &copy; 2016. 100 Shapes Ltd.
+
