--- a/themes/beryllium/layout/post.jade
+++ b/themes/beryllium/layout/post.jade
@@ -1,5 +1,23 @@
 extends base
 
 block site_body
-    include _partial/post/entry
+    include _partial/post/entry_pagination
+
+    .clearfix
+        .col.col-12.px2
+            h1.h1= page.title
+
+            include _partial/post/meta
+            +postDate(page.date)
+            +postCategory(page.categories)
+
+        .sm-col.sm-col-12.md-col-8.px2
+            div!= page.more
+
+        .sm-col.sm-col-12.md-col-4.px2
+            p.
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
     include _partial/post/entry_pagination
