style(Home): Content
Added secondary nav [ci skip]

--- a/content/labs/index.jade
+++ b/content/labs/index.jade
@@ -4,5 +4,5 @@ date: 2016-03-22 16:53:04
 layout: views/labs
 ---
 
-p hello, we do fun lab things here. It's mega.
+p.lead hello, we do fun lab things here. It's mega.
     
