--- a/themes/beryllium/layout/page.jade
+++ b/themes/beryllium/layout/page.jade
@@ -1,6 +1,7 @@
 extends base
 
 block site_body
-    h1.h1= page.title
+    .col.col-12.p2
+        h1.h1= page.title
 
-    section!= page.content
+        div!= page.content
