--- a/themes/beryllium/layout/views/join-us.jade
+++ b/themes/beryllium/layout/views/join-us.jade
@@ -4,7 +4,7 @@ block site_body
     .col.col-12.p2
         h1= page.title
 
-        p Join us content, innit.
+        p.lead Join us content, innit.
 
     .clearfix
         .sm-col.sm-col-8.p2
