--- a/themes/beryllium/source/css/theme/modules/typography.less
+++ b/themes/beryllium/source/css/theme/modules/typography.less
@@ -1,4 +1,9 @@
-h1, .h1,
+h1, .h1 {
+    &:not(.full-width) {
+        max-width: 25rem;
+    }
+}
+
 h2, .h2,
 h3, .h3,
 p {
@@ -13,4 +18,13 @@ h3, .h3,
 h4, .h4,
 h5, .h5 {
     line-height: 1.1;
+}
+
+.lead {
+    font-size: 1.3rem;
+    line-height: 1.2;
+
+    &:not(.full-width) {
+        max-width: 30rem;
+    }
 }
