--- a/themes/beryllium/layout/index.jade
+++ b/themes/beryllium/layout/index.jade
@@ -1,8 +1,9 @@
 extends base
 
 block site_body
-    h1.h1= page.title
+    .col.col-12.p2
+        h1= page.title
 
-    div!= page.content
+        div!= page.content
 
-    p hello
+        p hello
