--- a/themes/beryllium/layout/post.jade
+++ b/themes/beryllium/layout/post.jade
@@ -5,7 +5,7 @@ block site_body
 
     .clearfix
         .col.col-12.px2
-            h1.h1= page.title
+            h1.h1.my4= page.title
 
             include _partial/post/meta
             +postDate(page.date)
