--- a/themes/beryllium/layout/views/labs.jade
+++ b/themes/beryllium/layout/views/labs.jade
@@ -1,13 +1,14 @@
 extends ../base
 
 block site_body
-    h1= page.title
+    .col.col-12.p2
+        h1= page.title
 
-    section!= page.content
+        div!= page.content
 
-    - var lab_items = site.categories.findOne({name: 'labs'}).posts.toArray()
-    each post in lab_items
-        a(href=url_for(post.path)).border-box.border.rounded.p2.mb2.block
-            h1.h2= post.title
+        - var lab_items = site.categories.findOne({name: 'labs'}).posts.toArray()
+        each post in lab_items
+            a(href=url_for(post.path)).border-box.border.rounded.p2.mb2.block
+                h1.h2= post.title
 
 
