--- a/themes/beryllium/layout/views/project.jade
+++ b/themes/beryllium/layout/views/project.jade
@@ -1,6 +1,7 @@
 extends ../base
 
 block site_body
-    h1.h1= page.seo_title
+    .col.col-12.p2
+        h1.h1= page.seo_title
 
-    div!= page.content
+        div!= page.content
